--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-# To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
-flask==1.1.1
-gunicorn==19.10.0
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+docker==4.2.2
+Flask==1.1.2
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+requests==2.24.0
+six==1.15.0
+urllib3==1.25.10
+websocket-client==0.57.0
+Werkzeug==1.0.1
